# AI-Employee

./: .env.community.example  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPARISON.md  CONTRIBUTING.md  Caddyfile  LICENSE.md  README.md  SECURITY-TODO.md  SECURITY.md  VERSION  docker-compose.aiemployee.yml  docker-compose.community.yml  docker-compose.ha.yml  docker-compose.prod.yml  docker-compose.yml  todo.md
agent/: Dockerfile  claude-global.md  l3-approval-hook.sh  pyproject.toml
agent/app/: agent_runner.py  chat_consumer.py  chat_handler.py  codex_runner.py  command_filter.py  conditional_skills.py  config.py  context_compressor.py  health.py  llm_chat_handler.py  llm_runner.py  log_publisher.py  loop_detector.py  main.py  message_consumer.py  model_registry.py  multimodal.py  runner_hooks.py  skills_loader.py  task_consumer.py
agent/app/providers/: __init__.py  anthropic_provider.py  base.py  google_provider.py  openai_provider.py
agent/app/tools/: api_client.py  definitions.py  executor.py  mcp_client.py
agent/mcp/: bash-approval-server.mjs  brain-server.mjs  computer-use-server.mjs  email-server.mjs  hyperframes-server-http.mjs  hyperframes-server.mjs  knowledge-server.mjs  memory-server.mjs  msgraph-server.mjs  notification-server.mjs  orchestrator-server.mjs  package-lock.json  package.json  read-logs-server.mjs  skill-server.mjs
agent/scripts/: ai-team  create_skill.py
agent/skills/: README.md
agent/skills/document/: skill.json  tools.py
agent/skills/finance/: skill.json  tools.py
agent/skills/spreadsheet/: skill.json  tools.py
agent/tests/: test_command_policies.py  test_model_registry.py  test_openai_responses_tool_args.py  test_openai_temperature.py  test_present_file_marker.py  test_provider_routing.py
orchestrator/: Dockerfile  alembic.ini  pyproject.toml  seccomp-profile.json
orchestrator/alembic/versions/: 0ea61527a17e_merge_taskforce_and_gpt55_backfill_heads.py  1f27b810b854_merge_heads_for_preset_rules.py  2992c8efc2ad_add_budget_usd_platform_settings_agent_.py  31bac4710bad_add_feedback_table.py  363944841959_add_oauth_integrations_table.py  3bbdf0564184_merge_heads.py  41d29f2ad811_add_project_fields_to_agent_todos.py  484693cdc27d_add_github_to_oauth_provider_enum.py  4f717196ab31_add_session_id_to_chat_messages.py  515d03f814a0_backfill_codex_model_gpt5codex_to_gpt55.py  51b28b9b96b3_add_knowledge_feeds_table_for_mcp_.py  8bcc53195fcd_add_sso_fields_to_user.py  962dc9a5e481_add_chat_messages_table.py  975ce832c37b_merge_claude_md_and_task_gc_heads.py  a1b2c3d4e5f6_add_users_and_agent_ownership.py  a1b2c3d4e5f6_hermes_memory_curator.py  a1b2c3d4e5f6_skill_ab_validation.py  a1b2c3d4e5f6_skill_analytics_time_savings.py  a1b2c3d4e5f6_url_allowlist_tables.py  a1b2c3d4e5f7_user_profiles.py  a1b2c3d4e5f8_add_brain_links_second_brain.py  a1u2v3w4x5y6_oauth_user_scoped.py  a1u2v3w4x5y6_skill_files_table.py  a270dc70375b_merge_heads_todos_and_approvals.py  a5b6c7d8e9f0_second_brain_mcp.py  a7b8c9d0e1f2_meeting_scheduled_for.py  apns1dev2token3_device_tokens.py  b1b4f9d7981f_add_claude_md_to_agent_templates.py  b1c2d3e4f5g6_merge_heads_analytics.py  b2c3d4e5f6a7_meeting_parent_room_id.py  b2c3d4e5f6g7_url_allowlist_tables.py  b2c3d4e5f6g8_command_policies.py  b2v3w4x5y6z7_agent_webhook_enabled_token.py  b4017814d5a5_add_agent_templates.py  b5f7e8a9c0d1_add_agent_mode_and_llm_config.py  b6c7d8e9f0a1_agent_source_agent_id.py  b6f263e51643_add_webhook_token_hash_to_agents_for_.py  c1d2e3f4a5b6_add_autonomy_level_to_agents.py  c1d2e3f4a5b7_add_teams_table.py  c1d2e3f4g5h6_skill_usage_chat_tracking.py  (+59 more)
orchestrator/app/: config.py  dependencies.py  main.py
orchestrator/app/api/: admin.py  agents.py  ai_accounts.py  analytics.py  approval_rules.py  approvals.py  apps_overview.py  audit.py  auth.py  brain.py  brain_mcp.py  brains.py  command_policies.py  computer_use.py  docker_apps.py  downloads.py  event_triggers.py  features.py  feedback.py  health.py  integrations.py  kiosk.py  knowledge.py  knowledge_feeds.py  license.py  mcp_agent.py  mcp_exchange.py  mcp_msgraph.py  mcp_msgraph_external.py  mcp_servers.py  meeting_rooms.py  meetings.py  memory.py  notifications.py  oauth_as.py  observability.py  presence.py  ratings.py  reflection.py  roles.py  (+17 more)
orchestrator/scripts/: init_db.py
orchestrator/tests/: test_agent_harness_mapping.py  test_autonomy_enforcement.py  test_autonomy_matrix.py  test_bot_manager.py  test_bridge_auth.py  test_codex_auth_service.py  test_disk_monitor.py  test_exchange_crud.py  test_feedback_notifications.py  test_job_state.py  test_log_redaction.py  test_memory_caps.py  test_msgraph_crud.py  test_oauth_reauth.py  test_oauth_tenant.py  test_observability_and_oauth_tenant.py  test_peer_card.py  test_reflection.py  test_reflection_parse.py  test_schedule_cron_timezone.py  test_schedule_failure_alerts.py  test_self_test_github_pat_fallback.py  test_skill_ab_validation.py  test_skill_auto_injector.py  test_skill_curator.py  test_skill_improvement_review.py  test_skill_plateau.py  test_skill_security.py  test_skill_semantic_search.py  test_skill_versioning.py  test_task_router_model_coercion.py  test_task_steps.py  test_teams.py  test_telegram_rich_message.py  test_telegram_rich_message_json.py  test_trading_template.py  test_user_profiles.py  test_vault_write.py  test_vertical_packs.py  test_watchdog.py
(+374 files in other folders)
