[project]
name = "ai-employee-agent"
version = "0.1.0"
description = "AI Employee Agent - Autonomous Claude Code runner in Docker"
requires-python = ">=3.12"
dependencies = [
    "redis[hiredis]>=5.2",
    "aiohttp>=3.11",
    "pydantic-settings>=2.7",
    "httpx>=0.27",
    # Skill dependencies (spreadsheet, document, finance skills)
    "pandas>=2.0",
    "openpyxl>=3.1",
    "pymupdf>=1.23",
    "python-docx>=1.0",
    "python-pptx>=0.6",
    "odfpy>=1.4",
    # Visual generation (present_image tool: charts, plots, image processing)
    "matplotlib>=3.8",
    "Pillow>=10.0",
    "numpy>=1.24",
    # SVG → PNG rasterization for the view_image/present_image tools (logos are
    # usually SVG, which vision APIs reject). Uses system libcairo2 (in Dockerfile).
    "cairosvg>=2.7",
]

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
