[project]
name = "ai-employee-orchestrator"
version = "0.1.0"
description = "AI Employee Orchestrator - Manages Claude Code agents in Docker containers"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "uvicorn[standard]>=0.44.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
    "redis[hiredis]>=7.4.0",
    "docker>=7.1",
    "python-telegram-bot>=22.7",
    "pydantic-settings>=2.13.1",
    "cryptography>=46.0.7",
    "httpx>=0.28.1",
    "python-multipart>=0.0.26",
    "bcrypt>=5.0.0",
    "PyJWT>=2.12.1",
    "pydantic[email]>=2.12.5",
    "PyYAML>=6.0.3",
]

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
