[project]
name = "ai-employee-orchestrator"
version = "0.1.0"
description = "AI Employee Orchestrator - Manages Claude Code agents in Docker containers"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "redis[hiredis]>=5.2",
    "docker>=7.1",
    "python-telegram-bot>=21.9",
    "pydantic-settings>=2.7",
    "cryptography>=44.0",
    "httpx>=0.28",
    "python-multipart>=0.0.9",
    "bcrypt>=4.0",
    "PyJWT>=2.8",
    "pydantic[email]>=2.0",
    "PyYAML>=6.0",
    "croniter>=2.0",
    # Voice live-session feature
    "anthropic>=0.40",
    "edge-tts>=6.1",
    # APNs push — HTTP/2 for the Apple gateway
    "h2>=4.1",
    # On-prem Exchange MCP — EWS (Exchange Web Services) client
    "exchangelib>=5.4",
    # Realtime voice front — AWS Bedrock Nova Sonic bidirectional streaming
    # (plain boto3 has no bidirectional stream). Pulls in smithy-aws-core.
    "aws-sdk-bedrock-runtime>=0.7,<1.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
